--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-map-gl": "^6.1.16",
+    "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
