--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
+    "chart.js": "^3.5.1",
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.4.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
