--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-input-mask": "^2.0.4",
     "react-map-gl": "^6.1.16",
     "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^5.2.1",
